--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,8 +15,8 @@ jobs:
       - run: npm install  
       - run: npm run build --if-present
       - run: npm run test -coverprofile=coverage.out
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+      #- name: SonarCloud Scan
+      #  uses: SonarSource/sonarcloud-github-action@master
        # env:
        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
        #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
