--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
           node-version: 10.x  
       - run: npm install  
       - run: npm run build --if-present
-      - run: npm run test -coverprofile=coverage.out
+      - run: npm run test
       #- name: SonarCloud Scan
       #  uses: SonarSource/sonarcloud-github-action@master
        # env:
