--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,7 @@ jobs:
       - run: npm run test
       #- name: SonarCloud Scan
       #  uses: SonarSource/sonarcloud-github-action@master
-       # env:
+        env:
+          CI: false
        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
        #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
