--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 10
+      - name: Use Node.js 
         uses: actions/setup-node@v2
         with:
-          node-version: 10.x  
+          node-version: 20.x  
       - run: npm install  
       - run: npm run build --if-present
       - run: npm run test
