add sonar cloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
-sonar.projectKey=codeedu_fc2-sonarcloud
-sonar.organization=codeedu
+sonar.projectKey=marcosfsantos1980_desafio-ci
+sonar.organization=sonarmfs
 
 sonar.sources=./src
 sonar.exclusions=**/*_test.js
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.js
-sonar.go.coverage.reportPaths=coverage.out
