--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.exclusions=**/*_test.js
 sonar.tests=.
 sonar.test.inclusions=**/*_test.js
 
-sonar.javascript.lcov.reportPaths= ./coverage
+sonar.javascript.lcov.reportPaths= ./coverage/lcov.info
